# UrbiSound

./: .gitignore  CMakeLists.txt  README.txt
cmake/: FindUrbi.cmake
debian/: README.Debian  README.source  changelog  control  copyright  docs  liburbisound2.7.install
src/: CMakeLists.txt  UPlayer.cpp  UPlayer.h  UrbiSound.cpp  UrbiSound.h  sdlwave.c  sdlwave.cpp
test/: CMakeLists.txt  playsounds.u.in  playsounds.urbi.in
